[package]
name = "finance-utils"
version = "0.1.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.1.0"
serde = { version = "1.0.114", features = ["derive"] }
