[package]
name = "pecunia"
version = "0.1.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"

[dependencies]
auto_ops = "0.1.0"
derive_more = "0.99.9"
num-traits = "0.2.12"
num-derive = "0.3.2"
serde = { version = "1.0.114", features = ["derive"] }
chrono = "0.4.15"

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0.57"
concat-idents = "1.0.0"
lazy_static = "1.4.0"

[features]
default = []
